--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<title>PHP-Proxy</title>
-
-<meta name="generator" content="php-proxy.com">
+<title></title>
+<meta name="generator" content="">
 <meta name="version" content="<?=$version;?>">
 
 <style type="text/css">
@@ -12,18 +10,15 @@ html body {
 	font-family: Arial,Helvetica,sans-serif;
 	font-size: 12px;
 }
-
 #container {
 	width:500px;
 	margin:0 auto;
 	margin-top:150px;
 }
-
 #error {
 	color:red;
 	font-weight:bold;
 }
-
 #frm {
 	padding:10px 15px;
 	background-color:#FFC8C8;
@@ -34,7 +29,6 @@ html body {
 	-moz-border-radius: 8px;
 	border-radius: 8px;
 }
-
 #footer {
 	text-align:center;
 	font-size:10px;
@@ -42,30 +36,19 @@ html body {
 	clear:both;
 }
 </style>
-
 </head>
-
 <body>
-
-
 <div id="container">
 
 	<div style="text-align:center;">
 		<h1 style="color:blue;">PHP-Proxy</h1>
 	</div>
-	
-	<?php if(isset($error_msg)){ ?>
-	
+	<?php if(isset($error_msg)){ ?>	
 	<div id="error">
 		<p><?php echo strip_tags($error_msg); ?></p>
 	</div>
-	
 	<?php } ?>
-	
 	<div id="frm">
-	
-	<!-- I wouldn't touch this part -->
-	
 		<form action="index.php" method="post" style="margin-bottom:0;">
 			<input name="url" type="text" style="width:400px;" autocomplete="off" placeholder="http://" />
 			<input type="submit" value="Go" />
@@ -74,17 +57,9 @@ html body {
 		<script type="text/javascript">
 			document.getElementsByName("url")[0].focus();
 		</script>
-		
-	<!-- [END] -->
-	
 	</div>
-	
 </div>
-
 <div id="footer">
-	Powered by <a href="//www.php-proxy.com/" target="_blank">PHP-Proxy</a> <?php echo $version; ?>
 </div>
-
-
 </body>
 </html>
